Revision history for Perl extension Mojolicious::Plugin::HTMX.

1.00 2022-10-28
    - First release of Mojolicious::Plugin::HTMX