@@ -1,4 +1,6 @@
 Revision history for Perl extension Mojolicious::Plugin::HTMX.
 
+    - Added support for HX-Reselect header (htmx 1.9.3)
+
 1.00 2022-10-28
     - First release of Mojolicious::Plugin::HTMX
